Desktop scrollbar arrow key fix, ctrl+enter to save fave dialog, focus Notes (if possible) on edit, longer template dropdown autocomplete height, and fix search clearing after save

--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -34,6 +34,10 @@ html {
   height: 100%;
 }
 
+[hidden] {
+  display: none !important;
+}
+
 .pointer {
   cursor: pointer;
 }
